# list-ts-files

./: .gitignore  CHANGELOG.md  list-ts-files.cabal
src/: Main.hs  Parse.hs  Process.hs
