cabal-version:       >=1.10
name:                list-ts-files
version:             0.1.0.0
license-file:        LICENSE
author:              Max White
maintainer:          max@zaptic.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable list-ts-files
  main-is:             Main.hs
  hs-source-dirs: src
  other-modules: Parse
  build-depends:
      base >=4.12 && <4.13
    , streamly
    , mtl

  ghc-options:
    -O2
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16

  default-language:    Haskell2010
